syntax = "proto3";

package protos;

option go_package = "github.com/CaptainIRS/sharded-kvs/internal";

import "protos/kv.proto";

service ReplicaRPC {
    rpc Put(PutRequest) returns (PutResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc Join(JoinRequest) returns (JoinResponse) {}
    rpc LeaderID(LeaderIDRequest) returns (LeaderIDResponse) {}
    rpc DemoteVoter(DemoteVoterRequest) returns (DemoteVoterResponse) {}
}


message JoinRequest {
    int32 replica_id = 1;
    string address = 2;
}

message JoinResponse {}

message LeaderIDRequest {}

message LeaderIDResponse {
    string leader_id = 1;
}

message DemoteVoterRequest {
    int32 replica_id = 1;
    string address = 2;
}

message DemoteVoterResponse {}
